--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       output.textContent = "";
 
       try {
-        const res = await fetch("https://test-resume-parser.onrender.com/upload/", {
+        const res = await fetch("https://resume-parser-j72e.onrender.com/upload/", {
           method: "POST",
           body: formData
         });
